--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Details</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h2>Contact Details</h2>
+  <h1>Contact Details</h1>
   <p><a href="phone number.html"><strong>Phone</strong></a></li>
   </p>
   <p><a href="https://www.linkedin.com/in/chris-yun-744319121/"><strong>Linkedin</strong></a></p>
