--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,6 +14,7 @@
     <li>League of Legends</li>
     <li>Food</li>
   </ol>
+  <hr>
 </body>
 
 </html>
