--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Chris' Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- external CSS^ -->
+  <!-- Debugging: Google Chrome > View > Developer > Developer Tools -->
+  <!-- Internal/In-line CSS overrides external CSS -->
 </head>
 
 <body>
